# proctor

./: .gitignore  .gitleaks.toml  CLAUDE.md  LICENSE  PUBLISH_READINESS.md  README.md  RELEASE_CHECKLIST.md  RESEARCH.md  _audit_tmp5.mjs  action.yml  package-lock.json  package.json  proctor.schema.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  proctor.yml  release.yml  security.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
bench/: METHODOLOGY.md  results-live.csv
demo/: checkpoint-verification.test.ts  demo.tape  render_demo_gif.py
fixtures/: FIXTURES.md
fixtures/RH007/after/: .Rbuildignore  .busted  .rspec  CMakeLists.txt  Calculator.xctestplan  Cargo.toml  VisualBasicTests.runsettings  build.gradle  build.gradle.kts  build.sbt  calculator.cabal  calculator_test.go  dart_test.yaml  jest.config.ts  phpunit.xml  pom.xml  project.clj  tests.runsettings
scripts/: verify-pack.sh
src/: ast.ts  brand.ts  cli.ts  context.ts  diff.ts  engine.ts  pre-classifier.ts  receipt.ts  rules.ts  types.ts
tests/: action-yml.test.ts  adapters.test.ts  ast.test.ts  badge.test.ts  bench-csv.test.ts  bench-runner.test.ts  bench-seed.test.ts  bench-tasks-pool.test.ts  bench.test.ts  brand.test.ts  cli.test.ts  context.test.ts  demo-gif.test.ts  diff.test.ts  dist-package-json.test.ts  drift-check.test.ts  engine.test.ts  fixtures-p3.test.ts  fixtures.test.ts  manifest.test.ts  pre-classifier.test.ts  python-detection.test.ts  readme.test.ts  receipt.test.ts  redos.test.ts  shell-runner.test.ts  skill.test.ts  types.test.ts
(+431 files in other folders)
