cabal-version: 2.4
name: calculator
version: 0.1.0.0
build-type: Simple

library
  exposed-modules: Calculator
  build-depends: base
  default-language: Haskell2010

test-suite calculator-test
  buildable: False
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends: base, calculator, hspec
  default-language: Haskell2010
